--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,4 @@
+ALLOW ENOUGH TIME FOR DOWNLOAD OF IMAGES ND OTHERS WHEN RUNNING TESTS FOR THE FIRST TIME
 
 http://localhost:8080/testWebServer/servlet
 
